argocd/apps/homeassistant/voice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wyoming-piper
  namespace: homeassistant
  labels:
    app: piper
spec:
  selector:
    matchLabels:
      app: piper
  replicas: 1
  template:
    metadata:
      labels:
        app: piper
    spec:
      containers:
      - name: wyoming-piper
        image: rhasspy/wyoming-piper:1.5.0
        args: ["--voice", "en-gb-southern_english_female-low"]
        ports:
        - containerPort: 10200
        volumeMounts:
        - mountPath: /data
          name: data
        resources:  {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: piper-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wyoming-whisper
  namespace: homeassistant
  labels:
    app: whisper
spec:
  selector:
    matchLabels:
      app: whisper
  replicas: 1
  template:
    metadata:
      labels:
        app: whisper
    spec:
      containers:
      - name: wyoming-whisper
        image: rhasspy/wyoming-whisper:2.1.0
        args: ["--model", "tiny-int8", "--language", "en"]
        ports:
        - containerPort: 10300
        volumeMounts:
        - mountPath: /data
          name: data
        resources:  {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: whisper-data
