argocd/apps/homeassistant/voice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  piper
  namespace: homeassistant
spec:
  selector:
    app:  piper
  type: ClusterIP
  ports:
    - name:  http
      port:  10200
      protocol: TCP 
      targetPort: 10200
---
apiVersion: v1
kind: Service
metadata:
  name:  whisper
  namespace: homeassistant
spec:
  selector:
    app:  whisper
  type: ClusterIP
  ports:
    - name:  http
      port:  10300
      protocol: TCP 
      targetPort: 10200
