argocd/apps/homeassistant/voice/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piper
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: pipe.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: piper
            port:
              number: 10200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: whisper.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: whisper
            port:
              number: 10300
